--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -10,7 +10,7 @@
         <a class="nav-link" routerLink="/home">Home </a>
       </li>
       <li class="nav-item" routerLinkActive="active-link">
-        <a class="nav-link" >Heroes</a>
+        <a class="nav-link" routerLink="/heroes">Heroes</a>
       </li>
       <li class="nav-item" routerLinkActive="active-link">
         <a class="nav-link" routerLink="/about">About </a>
@@ -18,7 +18,7 @@
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
     </form>
   </div>
 </nav>
