--- a/src/app/components/heroes/heroes.component.html
+++ b/src/app/components/heroes/heroes.component.html
@@ -6,15 +6,15 @@
 
 <div class="card-columns">
 
-  <div class="card">
-    <img class="card-img-top img-fluid" src="assets/img/recursos/aquaman.png" alt="Card image cap">
+  <div class="card" *ngFor="let heroe of heroes, let i = index">
+    <img class="card-img-top img-fluid" [src]="heroe.img" [alt]="heroe.name">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+      <h5 class="card-title">{{ heroe.nombre }}</h5>
+      <p class="card-text">{{ heroe.bio }}</p>
       <p class="card-text">
-        <small class="text-muted">Last updated 3 mins ago</small>
+        <small class="text-muted">{{ heroe.aparicion }}</small>
       </p>
-      <button class="btn btn-outline-primary btn-block">Ver mas</button>
+      <a routerLink="/heroe/{{i}}" class="btn btn-outline-primary btn-block">Ver mas</a>
     </div>
   </div>
 
