--- a/src/app/components/heroe/heroe.component.html
+++ b/src/app/components/heroe/heroe.component.html
@@ -1,3 +1,14 @@
-<p>
-  heroe works!
-</p>
+<h1>{{ heroe.nombre }}
+  <small>{{ heroe.aparicion }}</small>
+</h1>
+<hr>
+<div class="row">
+  <div class="col-4">
+    <img class="img-fluid" src="{{ heroe.img }}" alt="{{ heroe.nombre }}">
+    <a href="" class="btn btn-outline-danger btn-block">Regresar</a>
+  </div>
+  <div class="col-8">
+    <p>{{ heroe.bio }}</p>
+    <img class="w-25" src="{{ getBrand() }}" alt="Marvel">
+  </div>
+</div>
