Fixes in HeroeComponent template Using packages installed by npm instead of CDN versions

--- a/src/app/components/heroes/heroes.component.html
+++ b/src/app/components/heroes/heroes.component.html
@@ -7,7 +7,7 @@
 <div class="card-columns">
 
   <div class="card" *ngFor="let heroe of heroes, let i = index">
-    <img class="card-img-top img-fluid" src="{{ heroe.img }}" alt="{{ heroe.name }}">
+    <img class="card-img-top img-fluid" src="{{ heroe.img }}" alt="{{ heroe.nombre }}">
     <div class="card-body">
       <h5 class="card-title">{{ heroe.nombre }}</h5>
       <p class="card-text">{{ heroe.bio }}</p>
