--- a/src/app/components/heroe/heroe.component.html
+++ b/src/app/components/heroe/heroe.component.html
@@ -1,14 +1,18 @@
-<h1>{{ heroe.nombre }}
-  <small>{{ heroe.aparicion }}</small>
-</h1>
-<hr>
-<div class="row">
-  <div class="col-4">
+<div class="row mt-3 animated fadein">
+  <div class="col-md-4">
     <img class="img-fluid" src="{{ heroe.img }}" alt="{{ heroe.nombre }}">
-    <a href="" class="btn btn-outline-danger btn-block">Regresar</a>
+    <br>
+    <br>
+    <a [routerLink]="['/heroes']" class="btn btn-outline-danger btn-block">Regresar</a>
   </div>
-  <div class="col-8">
+  <div class="col-md-8 mt-5">
+    <h3>{{ heroe.nombre }}</h3>
+    <hr>
     <p>{{ heroe.bio }}</p>
-    <img class="w-25" src="{{ getBrand() }}" alt="Marvel">
+    <div>
+      <!-- <img class="w-25" src="{{ getBrandLogoPath() }}" alt="Marvel"> -->
+      <img class="w-25" *ngIf="heroe.casa === 'Marvel'" src="assets/img/marvel.png" alt="Marvel">
+      <img class="w-25" *ngIf="heroe.casa === 'DC'" src="assets/img/dc.png" alt="DC">
+    </div>
   </div>
 </div>
