--- a/src/app/components/heroe/heroe.component.html
+++ b/src/app/components/heroe/heroe.component.html
@@ -6,7 +6,7 @@
     <a [routerLink]="['/heroes']" class="btn btn-outline-danger btn-block">Regresar</a>
   </div>
   <div class="col-md-8 mt-5">
-    <h3>{{ heroe.nombre }}</h3>
+    <h3>{{ heroe.nombre | uppercase }} <small>({{heroe.aparicion | date:'y'}})</small> </h3>
     <hr>
     <p>{{ heroe.bio }}</p>
     <div>
