--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,2 +1,5 @@
-<h1>Sobre Comic App</h1>
-<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum, asperiores. Eum, harum perferendis repellat dignissimos, quis saepe officia dolores eaque optio ipsam blanditiis facere obcaecati a sapiente sit sequi similique!</p>
+<div class="container animated fadeIn fast">
+  <h1>Sobre Comic App</h1>
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum, asperiores. Eum, harum perferendis repellat dignissimos,
+    quis saepe officia dolores eaque optio ipsam blanditiis facere obcaecati a sapiente sit sequi similique!</p>
+</div>
