--- a/src/app/components/heroe/heroe.component.html
+++ b/src/app/components/heroe/heroe.component.html
@@ -1,4 +1,4 @@
-<div class="row mt-3 animated fadein">
+<div class="row mt-3 animated fadeIn fast">
   <div class="col-md-4">
     <img class="img-fluid" src="{{ heroe.img }}" alt="{{ heroe.nombre }}">
     <br>
